--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon app.js"
+    "start": "nodemon app.js",
+    "heroku-postBuild":"NPM_CONFIG_PRODUCTION=false run npm install --prefix client && npm run build --prefix client"
   },
   "author": "Chafik LAGHRISSI",
   "license": "ISC",
