--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node app.js",
+    "server":"nodemon app.js",
+    "client":"npm run start --prefix client",
     "heroku-postBuild":"NPM_CONFIG_PRODUCTION=false run npm install --prefix client && npm run build --prefix client"
   },
   "author": "Chafik LAGHRISSI",
