--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
   },
   "author": "Chafik LAGHRISSI",
   "license": "ISC",
+  "engines": {
+    "node": "12.18.3"
+  },
   "dependencies": {
     "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
