--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "author": "Chafik LAGHRISSI",
   "license": "ISC",
   "engines": {
-    "node": "12.18.3"
+    "node": "12.18.3",
+    "npm":"6.14.6"
   },
   "dependencies": {
     "bcrypt": "^5.0.0",
