--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node app.js",
     "server":"nodemon app.js",
-    "client":"npm run start --prefix client",
-    "heroku-postBuild":"NPM_CONFIG_PRODUCTION=false run npm install --prefix client && npm run build --prefix client"
+    "build":"cd client && npm build",
+    "client":"cd client && npm install",
+    "heroku-postBuild":" run npm client && run npm build"
   },
   "author": "Chafik LAGHRISSI",
   "license": "ISC",
