--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,17 @@
 /node_modules
 npm-debug.log
+/client/node_modules
+/client/.env.development.local
+/client/.env.production.local
 .DS_Store
 /*.env
 .vscode
+/.pnp
+.pnp.js
+
+# testing
+/coverage
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
